objects/Object__c.object
<CustomObject>
    <fields>
        <fullName>FIELD100__c</fullName>
        <label>FIELD100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIELD101__c</fullName>
        <label>FIELD101</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIELD102__c</fullName>
        <label>FIELD102</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FIELD__c</columns>
        <columns>FIELD2__c</columns>
        <columns>FIELD3__c</columns>
        <columns>FIELD4__c</columns>
        <columns>FIELD5__c</columns>
        <columns>FIELD6__c</columns>
        <columns>FIELD7__c</columns>
        <columns>FIELD8__c</columns>
        <columns>FIELD9__c</columns>
        <columns>FIELD10__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>